fix mw misconf
